--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <h1>Welcome to the Offline Multiplayer Connect Four</h1>
         <h2 id="winner"></h2>
         <div id="board"></div>
+		<div id="rules" style=" float:right"><p><strong>Here are the rules of Connect Four:</strong></p>
+
+			<p>1) The game starts with an empty game board.</p>
+			<p>2) Players take turns dropping colored disks into the columns from the top.</p>
+<p>3) Once a disk is dropped into a column, it falls to the lowest unoccupied space in that column.</p>
+<p>4) The first player to connect four of their colored disks vertically, horizontally, or diagonally wins the game.</p>
+			<p>5) If all spaces on the board are filled without a winner, then the game is considered a tie.</p>
+			<p>6) Players cannot remove a disk once it has been dropped.</p>
+			<p>7) A player must drop their disk into a column that is not already full.</p>
+<p>8) Players must connect their disks in a straight line. This means that a diagonal line of three disks and one empty space does not count as a win.</p>
+<p>9) The game can be played again and again, with players alternating who goes first</p></div>
     </body>
 </html>
