--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>DebugIt Offline Connect Four</title>   
         <link rel="stylesheet" href="DebugConnectFour.css" type="text/css">
-        <script src="DebugConnectFour.js"></script> 
+        <script src="DebugConnectFour.js"></script>
+		
     </head>
     <body>
         <h1>Welcome to the Offline Multiplayer Connect Four</h1>
@@ -23,5 +24,6 @@
 			<p>7) A player must drop their disk into a column that is not already full.</p>
 <p>8) Players must connect their disks in a straight line. This means that a diagonal line of three disks and one empty space does not count as a win.</p>
 <p>9) The game can be played again and again, with players alternating who goes first</p></div>
+		<button class="button" onClick="window.location.reload();">New Game</button>
     </body>
 </html>
